   - Update: Included Dutch translation for 2.0.2 into CVS (was from 1.4.0
        before)
   - Bugfix: Building certificate chain automatically (this fixes debian
        bug #226914)
   - Bugfix: Don't load config file twice in gnome mode
   - Cleanup: Get "prevdos_line_length" option only once per connect not once
        per line
   - Bugfix: Displaying error messages instead of mail body
 * Roland Stigge
   - Bugfix: Encoding of "po/fr.po"

Version 2.1.1
 * Nicolas Rougier
   - bugfix: gui, biff geometry field was sensitive when in gnome mode
   - bugfix: password automatic finding, misplaced mutex lock
   - bugfix: password automatic finding, port was no taken into account
   - bugfix: use delay instead of 1 second between FAM retries.
   - bugfix: change preferences ui
   - update: French translation
   - update: gnubiff.texi
   - bugfix: Remove use of the pseudo-capability greeting message in IMAP4
 * Robert Sowada
   - Changed version to 2.1.1, updated spec file
   - Small changes
   - Marked strings for internationalization (type & authentication menu)
   - Updated po files, German translation
   - Bugfix: Parsing local mails could trigger additional FAM events
     resulting in parsing mails another time (->infinite loop, 100% CPU load)
   - Translating copyright message in credits dialog simplified (po files are
     now independent of cuurent version)
   - Added decoding.cc to POTFILES.in
   - Bugfix: Setting mailbox status to old after new mail is displayed (thanks
     to Byron Foster for providing a patch)
   - Bugfix: Quick test for new mail while idling is not enogh (IMAP4; thanks
        to Byron Foster for providing a patch)
   - Added Byron Foster to Contributors
   - Bugfix: Don't crash if server's response is not valid (IMAP4; thanks to
        Calum Mackay for reporting this bug)
   - Feature: Applet and Popup now can be set to be sticky and be kept above
        all other windows