@@ -1,6 +1,6 @@
 // ========================================================================
 // gnubiff -- a mail notification program
-// Copyright (c) 2000-2004 Nicolas Rougier
+// Copyright (c) 2000-2005 Nicolas Rougier
 //
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License as
@@ -56,6 +56,7 @@ public:
 	//  general
 	// ================================================================================
 	std::string		passtable_;					// encryption table
+	static void bug_report_msg (void);
 
 protected:
 	// ================================================================================
